# profits-check

./: .gitignore  AGENTS.md  CLAUDE.md  DESIGN_ALIGNMENT.md  README.md  run_dev.py
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260509_0001_init.py  20260512_0002_auth_sessions.py  20260512_0003_liquidation_monitor.py  20260516_0004_liquidation_margin_balances.py  20260520_0005_onchain_provider.py  20260520_0006_onchain_chain_indexes.py  20260530_0007_adl_monitor.py  20260531_0008_portfolio_inclusion_rules.py  20260609_0009_monthly_funding_fee_summaries.py  20260609_0010_daily_funding_fee_summaries.py  20260621_0011_daily_funding_fee_asset_summaries.py
backend/app/: main.py
backend/app/adapters/: __init__.py  binance.py  bsc.py
backend/src/app/: __init__.py  main.py
backend/src/app/adapters/: __init__.py  base.py  binance.py  bsc.py
backend/src/profits_check_backend/: __init__.py  config.py  db.py  main.py  models.py  security.py
backend/src/profits_check_backend/domain/: models.py
backend/src/profits_check_backend/providers/: aster.py  base.py  binance.py  bitget.py  bsc.py  bybit.py  gate.py  http.py  okx.py  onchain.py  placeholders.py  registry.py
backend/tests/: conftest.py  test_adapters.py  test_auth_api.py  test_channels_api.py  test_config_and_crypto.py  test_funding_fees_api.py  test_liquidation_monitor.py  test_migrations.py  test_providers.py  test_reset_api.py  test_run_dev_script.py  test_scheduler_api.py  test_security_hardening.py  test_snapshot_service.py  test_snapshots_api.py
(+20 files in other folders)
