[project]
name = "profits-check-backend"
version = "0.1.0"
description = "Asset tracking and snapshot backend"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16.5",
  "apscheduler>=3.11.0",
  "cryptography>=46.0.3",
  "fastapi>=0.115.0",
  "httpx>=0.28.1",
  "pydantic-settings>=2.11.0",
  "sqlalchemy>=2.0.44",
  "uvicorn>=0.38.0",
  "web3>=7.14.0",
]

[dependency-groups]
dev = [
  "mypy>=1.18.2",
  "pytest>=8.4.2",
  "pytest-asyncio>=1.2.0",
  "pytest-cov>=7.0.0",
  "pytest-httpx>=0.35.0",
  "ruff>=0.14.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/profits_check_backend", "src/app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["B008", "E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["N802"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
